# lodop-bridge-desktop

./: .gitignore  IMPLEMENTATION.md  README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: desktop-release.yml
config/: default.json
demo/: index.html
docs/user-guide/: quick-start.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CurrentBinding.tsx  EndpointDisplay.tsx  FavoriteNameDialog.tsx  FavoriteSwitchConfirmDialog.tsx  FloatingNoticeHost.tsx  HostDiscovery.tsx  HostStatusPill.tsx  PortSettingsDialog.tsx  QuickConnect.tsx  Settings.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  progress.tsx
frontend/src/lib/: clodop.ts  endpoint.ts  host-status.ts
main/: headless-bridge.js  index.js  preload.js  proxy-server.js  scanner.js  storage.js
renderer/: bundle.js  index.html
renderer/src/: App.jsx  index.js
renderer/src/components/: CurrentBinding.jsx  HostDiscovery.jsx  Settings.jsx
renderer/src/styles/: App.css
scripts/: build-icon.sh
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  diagnostics.rs  error.rs  main.rs  playwright_bridge.rs  scanner.rs  storage.rs
src-tauri/src/proxy/: mod.rs  runtime.rs  server.rs  websocket.rs
src/config/: manager.ts  schema.ts
src/logger/: logger.ts
src/utils/: errors.ts  network.ts
types/: config.d.ts
